--- a/src/AlignCop.Analyzers.CodeFixes/CodeFixResources.resx
+++ b/src/AlignCop.Analyzers.CodeFixes/CodeFixResources.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AlignVariableAssignmentsCodeFixTitle" xml:space="preserve">
+    <value>Align assignments</value>
+  </data>
   <data name="AlignEnumValuesCodeFixTitle" xml:space="preserve">
     <value>Align enum values</value>
   </data>
