--- a/src/AlignCop.Analyzers/Resources.resx
+++ b/src/AlignCop.Analyzers/Resources.resx
@@ -117,6 +117,15 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="AlignVariableAssignmentsDescription" xml:space="preserve">
+    <value>Assignments should be aligned.</value>
+  </data>
+  <data name="AlignVariableAssignmentsMessageFormat" xml:space="preserve">
+    <value>Assignments should be aligned</value>
+  </data>
+  <data name="AlignVariableAssignmentsTitle" xml:space="preserve">
+    <value>Unaligned assignments</value>
+  </data>
   <data name="AlignEnumValuesDescription" xml:space="preserve">
     <value>Enum values should be aligned.</value>
   </data>
